layout issues fixed abd blog order updated

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,6 @@ html {
 .prose a {
   @apply no-underline text-blue-600 hover:underline;
 }
+.brevo-frame-popup {
+  max-width: 90%;
+}
